--- a/src/components/BookItem.css
+++ b/src/components/BookItem.css
@@ -1,10 +1,4 @@
-.book-item {
-   width: 200px;
-   height: 300px;
-   margin: 1rem;
-   border: 1px solid black;
-   box-shadow: 1px 1px 1px 1px;
-   display: flex;
-   flex-direction: column;
-   align-items: center;
+h2,
+h3 {
+   text-align: center;
 }
