--- a/src/components/BookCard.css
+++ b/src/components/BookCard.css
@@ -1,5 +1,5 @@
 .book-item-container {
-   width: 350px;
+   width: 30%;
    height: 380px;
    margin: 1rem;
    border: 1px solid black;
@@ -10,4 +10,10 @@
    flex-direction: column;
    align-items: center;
    justify-content: center;
+}
+
+@media (max-width: 480px) {
+   .book-item-container {
+      width: 70%;
+   }
 }
