--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,13 @@
   flex-wrap: wrap;
   justify-content: center;
 }
+
+.dark-theme {
+  background-color: #020c1a;
+  color: white;
+  height: 100vh;
+}
+
+.opacity-80 {
+  opacity: 0.8;
+}
