--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,10 @@
 .dark-theme {
   background-color: #020c1a;
   color: white;
-  height: 100vh;
+  height: 100%;
 }
 
 .opacity-80 {
   opacity: 0.8;
+  height: 100vh;
 }
